# tg_bot_template

./: .env.example  README.md  bot.py  pyproject.toml
config_data/: config.py
db_models/: models.py
filters/: is_admin.py
handlers/: admin_handlers.py  other_handlers.py  user_actions.py  user_handlers.py
keyboards/: keyboards.py  keyboards_utils.py  set_menu.py
lexicon/: __init__.py  lexicon_en.py  lexicon_ru.py
middlewares/: trottling.py
