[tool.poetry]
name = "<YOUR-PROJECT-NAME>"
version = "0.1.0"
description = ""
authors = ["Shmonov Matvey <meology77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
environs = "^9.5.0"
redis = "^4.6.0"
aiogram = "3.0.0b7"
aiogram-dialog = "2.0.0b20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
